deployments/k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ajora-production
  labels:
    name: ajora-production
    environment: production
